# sushi-lang

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  OMAKASE.md  PACKAGING.md  README.md  STYLE.md  compiler.py  grammar.lark  mkdocs.yml  monitor_memory.sh  nori  pyproject.toml  sushic  sync-to-public.sh
.githooks/: pre-push
.github/workflows/: docs.yml  release.yml  test.yml
backend/: codegen_llvm.py  constants.py  dependency_graph.py  destructors.py  enum_utils.py  gep_utils.py  interfaces.py  library_format.py  library_linker.py  library_manifest.py  library_registry.py  llvm_constants.py  llvm_functions.py  llvm_optimization.py  llvm_types.py  llvm_utils.py  module_merger.py  stdlib_linker.py  string_constants.py  symbol_resolver.py
backend/constants/: __init__.py  bit_widths.py  error_codes.py  indices.py  llvm_values.py  sizes.py
backend/expressions/: __init__.py  casts.py  enums.py  literals.py  memory.py  operators.py  structs.py  type_utils.py
backend/functions/: __init__.py  declarations.py  definitions.py  helpers.py  main_wrapper.py
backend/generics/: dispatcher.py  enum_methods_base.py  extensions.py  maybe.py  own.py  result_builder.py  results.py
backend/memory/: __init__.py  dynamic_arrays.py  heap.py  scopes.py
backend/runtime/: __init__.py  args.py  constants.py  core.py  errors.py  formatting.py  strings.py
backend/statements/: __init__.py  control_flow.py  initialization.py  io.py  loops.py  matching.py  returns.py  utils.py  variables.py
backend/types/: __init__.py  enums.py  hash_utils.py  structs.py
backend/utils/: validation.py
docs/: README.md  closures.md  color-scheme.html  compiler-reference.md  error-handling.md  ffi.md  first-class-functions.md  generics.md  getting-started.md  index.md  language-guide.md  language-reference.md  libraries.md  library-format.md  memory-management.md  package-manager.md  perks.md  standard-library.md  variadics.md
docs/design/: closures-tier1-handoff.md  closures.md  first-class-functions.md  generic-higher-order.md  libraries.md  move-semantics.md  omakase-install.md  string-representation.md  variadics.md
docs/examples/: 01-hello.sushi  02-variables.sushi  03-functions.sushi  04-strings.sushi  05-interpolation.sushi  06-arrays.sushi  07-result.sushi  08-maybe.sushi  09-error-propagation.sushi  10-structs.sushi  11-enums.sushi  12-pattern-matching.sushi  13-references.sushi  14-generics.sushi  15-lists.sushi  16-hashmaps.sushi  17-loops.sushi  18-file-io.sushi  19-extension-methods.sushi  20-ownership.sushi  21-control-flow.sushi  22-linked-list.sushi  23-perks-basic.sushi  24-perks-constraints.sushi  25-named-parameters.sushi  26-libraries.sushi  27-markov-chain.sushi  28-ffi.sushi  README.md  mathlib.sushi
docs/internals/: architecture.md  backend.md  semantic-passes.md  stdlib-build.md
docs/stdlib/: env.md  math.md  maybe.md  platform.md  process.md  random.md  result.md  time.md
docs/stylesheets/: sushi.css
docs/sushi-pygments/: pyproject.toml
docs/sushi-pygments/sushi_pygments/: __init__.py
docs/tutorial/: 01-getting-started.md  02-variables-and-types.md  03-control-flow.md  04-functions.md  05-strings.md  06-error-handling.md  07-arrays.md  08-structs-and-enums.md  09-pattern-matching.md  10-generics.md  11-perks-and-extensions.md  12-memory-management.md  13-collections.md  14-stdlib-ffi-libraries.md  15-variadic-functions.md  16-foreign-pointers.md  17-first-class-functions.md  18-closures.md  19-higher-order-combinators.md  index.md
editor-support/: .gitignore  README.md  SYNTAX_SHOWCASE.sushi
editor-support/jetbrains/: README.md
editor-support/vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  sushi.tmLanguage.json
frontend/: ast_printer.py
internals/: errors.py  indenter.py  version.py
semantics/: ast.py  error_reporter.py  method_type_registry.py  pipeline.py  semantic_analyzer.py  stdlib_registry.py  symbol_merger.py  type_predicates.py  type_resolution.py  type_visitor.py  typesys.py  units.py  validate_arrays.py  visitors.py
semantics/ast_builder/: README.md  __init__.py  builder.py  exceptions.py
semantics/enums/: variants.py
semantics/generics/: __init__.py  constraints.py  instantiate.py  monomorphize.py  name_mangling.py  types.py
semantics/passes/: ast_transform.py  borrow.py  collect.py  const_eval.py  hash_registration.py  scope.py
stdlib/: build.py
stdlib/src/: common.py  conversions.py  error_emission.py  libc_declarations.py  string_helpers.py  type_converters.py  type_definitions.py
sushi_lang/: __init__.py  __main__.py  compiler.py  grammar.lark
sushi_lang/backend/: codegen_llvm.py  constants.py  dependency_graph.py  destructors.py  enum_utils.py  gep_utils.py  interfaces.py  library_errors.py  library_format.py  library_linker.py  library_manifest.py  library_paths.py  library_registry.py  library_templates.py  llvm_constants.py  llvm_functions.py  llvm_optimization.py  llvm_types.py  llvm_utils.py  module_linker.py  module_merger.py  platform_detect.py  stdlib_builder.py  stdlib_linker.py  string_constants.py  symbol_resolver.py  symbol_table.py
sushi_lang/compiler/: __init__.py  cache.py  cli.py  fingerprint.py  loader.py  pipeline.py
sushi_lang/internals/: diagnostics.py  errors.py  generic_lexer.py  indenter.py  parse_errors.py  parser.py  report.py  version.py
sushi_lang/packager/: __init__.py  __main__.py  api_client.py  archive.py  cli.py  constants.py  credentials.py  installer.py  manifest.py  paths.py  repository.py
sushi_lang/semantics/: ast.py  error_reporter.py  externs_manifest.py  library_templates.py  method_type_registry.py  pipeline.py  semantic_analyzer.py  stdlib_registry.py  symbol_merger.py  (+8 more)
tests/: TEST_METADATA_GUIDE.md  enhanced_test_runner.py  run_tests.py  test_file_copy.sushi  test_file_exists.sushi  test_file_is_dir.sushi  test_file_is_file.sushi  test_file_mkdir_rmdir.sushi  test_file_rename.sushi  test_file_size.sushi  test_metadata.py  test_string_find_last.sushi  test_string_join.sushi
(+2041 files in other folders)
