[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sushi-lang"
version = "0.5.0"
description = "Sushi Lang — a small compiled language with Lark front-end and an llvmlite/LLVM backend."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "David Klasinc" }
]
keywords = ["compiler", "language", "llvm", "llvmlite", "lark", "parser"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Compilers",
]

dependencies = [
  "lark>=1.2,<1.3",
  "llvmlite>=0.45,<0.46",
  "colorama>=0.4",
  "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4",
  "ruff>=0.13",
  "black>=25.9",
  "mypy>=1.18",
  "tqdm>=4.67,<5"
]

[project.scripts]
sushic = "sushi_lang.compiler:main"

[tool.hatch.build.targets.wheel]
packages = ["sushi_lang"]
exclude = [
  "sushi_lang/sushi_stdlib/build.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "sushic",
  "tests",
  ".github",
  "docs",
  "editor-support",
  "frontend",
]

