[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sushi-lang"
version = "0.10.0"
description = "Sushi Lang — a small compiled language with Lark front-end and an llvmlite/LLVM backend."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "David Klasinc" }
]
keywords = ["compiler", "language", "llvm", "llvmlite", "lark", "parser"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Compilers",
]

dependencies = [
  "lark>=1.2,<1.3",
  "llvmlite>=0.45,<0.46",
  "colorama>=0.4",
  "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1",
  "ruff>=0.15",
  "mypy>=2.3",
  "pre-commit>=4.6",
  "tqdm>=4.67,<5"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0"
]

[project.scripts]
sushic = "sushi_lang.compiler:main"
nori = "sushi_lang.packager:main"

[tool.hatch.build.targets.wheel]
packages = ["sushi_lang"]
exclude = [
  "sushi_lang/sushi_stdlib/build.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "sushic",
  "tests",
  ".github",
  "docs",
  "editor-support",
  "frontend",
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "B"]
# E501: no formatter is in use (black was dropped unadopted); a line-length gate
# without a formatter is hand-wrapping busywork with no bug-finding value.
ignore = ["E501"]

[tool.mypy]
# Deliberately minimal. mypy has never run on this tree: until the prose comment at
# backend/types/core/mapping.py was reworded, it aborted on the first file, reading
# "# type: ..." as a PEP 484 type comment. It now parses all 385 files and reports a
# large error count by design -- that count is a baseline to burn down later, not a
# gate. No strictness flags, and no CI job, until the backlog is paid down.
python_version = "3.13"
ignore_missing_imports = true
