[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sushi-lang"
version = "0.10.0"
description = "Sushi Lang — a small compiled language with Lark front-end and an llvmlite/LLVM backend."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "David Klasinc" }
]
keywords = ["compiler", "language", "llvm", "llvmlite", "lark", "parser"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Compilers",
]

dependencies = [
  "lark>=1.2,<1.3",
  "llvmlite>=0.45,<0.46",
  "colorama>=0.4",
  "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1",
  "ruff>=0.15",
  "mypy>=2.3",
  "pre-commit>=4.6",
  "tqdm>=4.67,<5"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10.0"
]

[project.scripts]
sushic = "sushi_lang.compiler:main"
nori = "sushi_lang.packager:main"

[tool.hatch.build.targets.wheel]
packages = ["sushi_lang"]
exclude = [
  "sushi_lang/sushi_stdlib/build.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "sushic",
  "tests",
  ".github",
  "docs",
  "editor-support",
  "frontend",
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "B"]
# E501: no formatter is in use (black was dropped unadopted); a line-length gate
# without a formatter is hand-wrapping busywork with no bug-finding value.
ignore = ["E501"]

[tool.mypy]
# Tier 5.2 ratchet. The CLEAN packages (internals, compiler, packager, sushi_stdlib)
# are enforced by a blocking CI step that checks exactly those paths; the remaining
# backlog (backend ~1500, semantics ~700, mostly union-attr on stamped Optional
# annotations) is burned down in later waves, with a non-blocking CI step printing
# the full count so drift stays visible. No strictness flags yet.
python_version = "3.13"
ignore_missing_imports = true
